GUI: mux: add special drop zones circumventing "add multiple files" settings
Default off, can be turned on in the preferences.

implements #3796

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -835,6 +835,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="cbMShowDNDZones">
+             <property name="text">
+              <string>Show special drag &amp;&amp; drop &amp;zones</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="cbMSortFilesTracksByTypeWhenAdding">
              <property name="text">
               <string>S&amp;ort files &amp;&amp; tracks by track type when adding files</string>
@@ -2840,6 +2847,7 @@
   <tabstop>cbMDragAndDropFilesPolicy</tabstop>
   <tabstop>cbMDragAndDropDirectoriesPolicy</tabstop>
   <tabstop>cbMAlwaysCreateSettingsForVideoFiles</tabstop>
+  <tabstop>cbMShowDNDZones</tabstop>
   <tabstop>cbMSortFilesTracksByTypeWhenAdding</tabstop>
   <tabstop>cbMReconstructSequencesWhenAdding</tabstop>
   <tabstop>cbMAttachmentAlwaysSkipForExistingName</tabstop>
