--- a/src/mkvtoolnix-gui/qt_resources.qrc
+++ b/src/mkvtoolnix-gui/qt_resources.qrc
@@ -310,6 +310,8 @@
   <file alias='icons/mkvtoolnix-gui/oxygen/system-run.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/system-run.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/system-software-update.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/system-software-update.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/tab-duplicate.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tab-duplicate.svg</file>
+  <file alias='icons/mkvtoolnix-gui/oxygen/tab-new-background.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tab-new-background.svg</file>
+  <file alias='icons/mkvtoolnix-gui/oxygen/tab-new.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tab-new.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/tool-animator.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tool-animator.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/tools-wizard.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/tools-wizard.svg</file>
   <file alias='icons/mkvtoolnix-gui/oxygen/utilities-terminal.svg' compress='9' compress-algo='zstd'>../../share/icons/oxygen/utilities-terminal.svg</file>
